--- a/week04clustering/lab04/lab_excercise04-Iris.ipynb
+++ b/week04clustering/lab04/lab_excercise04-Iris.ipynb
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "#4 Fitting hierarchical clustering to the Iris dataset\n",
+    "# Fitting hierarchical clustering to the Iris dataset\n",
     "single_linkage_clustering = AgglomerativeClustering(n_clusters = 3, affinity = 'euclidean', linkage ='single')\n",
     "irisdf['single_predicted'] = single_linkage_clustering.fit_predict(iris_arr)\n",
     "irisdf['single_predicted'][:10]"
