--- a/week08knn_svm_randomforest/lab08/Chaithra-Lab08-knn-svm-randomforest.ipynb
+++ b/week08knn_svm_randomforest/lab08/Chaithra-Lab08-knn-svm-randomforest.ipynb
@@ -1,30 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ddbf28b2",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d55544",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Exercise:kNN\n",
-    "\n",
-    "Using the Titanic data: Create a kNN model Report accuracy when number of neighbors = {1, 3, 5, 7}. Pick the best k value and then change the weighted distance metric. Report if distance weighting helps or not."
+    "# Data Pre-Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "94484a21",
+   "execution_count": 33,
+   "id": "462df12c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing required libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import confusion_matrix,classification_report"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a342d18",
+   "id": "69a05bd4",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "07c2de95",
+   "id": "22a01a99",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "444350eb",
+   "id": "0c0badcb",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74ec9c98",
+   "id": "8f8af32d",
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +446,454 @@
    ],
    "source": [
     "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f0277146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converting cabin to binary attribute using dummy variable\n",
+    "train['Cabin'] = train[\"Cabin\"].apply(lambda x: 0 if type(x) == float else 1)\n",
+    "test['Cabin'] = test[\"Cabin\"].apply(lambda x: 0 if type(x) == float else 1)\n",
+    "\n",
+    "# converting sex cateogorical variable to dummy variable\n",
+    "train['Sex'] = train[\"Sex\"].replace({'male':0,'female':1})\n",
+    "test['Sex'] = test[\"Sex\"].replace({'male':0,'female':1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a026ec74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[     PassengerId  Survived  Pclass  Sex   Age  SibSp  Parch            Ticket  \\\n",
+       " 0              1         0       3    0  22.0      1      0         A/5 21171   \n",
+       " 1              2         1       1    1  38.0      1      0          PC 17599   \n",
+       " 2              3         1       3    1  26.0      0      0  STON/O2. 3101282   \n",
+       " 3              4         1       1    1  35.0      1      0            113803   \n",
+       " 4              5         0       3    0  35.0      0      0            373450   \n",
+       " ..           ...       ...     ...  ...   ...    ...    ...               ...   \n",
+       " 886          887         0       2    0  27.0      0      0            211536   \n",
+       " 887          888         1       1    1  19.0      0      0            112053   \n",
+       " 888          889         0       3    1   NaN      1      2        W./C. 6607   \n",
+       " 889          890         1       1    0  26.0      0      0            111369   \n",
+       " 890          891         0       3    0  32.0      0      0            370376   \n",
+       " \n",
+       "         Fare  Cabin Embarked  \n",
+       " 0     7.2500      1        S  \n",
+       " 1    71.2833      1        C  \n",
+       " 2     7.9250      1        S  \n",
+       " 3    53.1000      1        S  \n",
+       " 4     8.0500      1        S  \n",
+       " ..       ...    ...      ...  \n",
+       " 886  13.0000      1        S  \n",
+       " 887  30.0000      1        S  \n",
+       " 888  23.4500      1        S  \n",
+       " 889  30.0000      1        C  \n",
+       " 890   7.7500      1        Q  \n",
+       " \n",
+       " [891 rows x 11 columns],\n",
+       "      PassengerId Survived  Pclass  Sex   Age  SibSp  Parch  \\\n",
+       " 0            892        ?       3    0  34.5      0      0   \n",
+       " 1            893        ?       3    1  47.0      1      0   \n",
+       " 2            894        ?       2    0  62.0      0      0   \n",
+       " 3            895        ?       3    0  27.0      0      0   \n",
+       " 4            896        ?       3    1  22.0      1      1   \n",
+       " ..           ...      ...     ...  ...   ...    ...    ...   \n",
+       " 413         1305        ?       3    0   NaN      0      0   \n",
+       " 414         1306        ?       1    1  39.0      0      0   \n",
+       " 415         1307        ?       3    0  38.5      0      0   \n",
+       " 416         1308        ?       3    0   NaN      0      0   \n",
+       " 417         1309        ?       3    0   NaN      1      1   \n",
+       " \n",
+       "                  Ticket      Fare  Cabin Embarked  \n",
+       " 0                330911    7.8292      1        Q  \n",
+       " 1                363272    7.0000      1        S  \n",
+       " 2                240276    9.6875      1        Q  \n",
+       " 3                315154    8.6625      1        S  \n",
+       " 4               3101298   12.2875      1        S  \n",
+       " ..                  ...       ...    ...      ...  \n",
+       " 413           A.5. 3236    8.0500      1        S  \n",
+       " 414            PC 17758  108.9000      1        C  \n",
+       " 415  SOTON/O.Q. 3101262    7.2500      1        S  \n",
+       " 416              359309    8.0500      1        S  \n",
+       " 417                2668   22.3583      1        C  \n",
+       " \n",
+       " [418 rows x 11 columns]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data = [train,test]\n",
+    "full_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "61a264f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove all NULLS in the Age column\n",
+    "for dataset in full_data:\n",
+    "    age_avg = dataset['Age'].mean()\n",
+    "    age_std = dataset['Age'].std()\n",
+    "    age_null_count = dataset['Age'].isnull().sum()\n",
+    "    age_null_random_list = np.random.randint(age_avg - age_std, age_avg + age_std, size=age_null_count)\n",
+    "    # Next line has been improved to avoid warning\n",
+    "    dataset.loc[np.isnan(dataset['Age']), 'Age'] = age_null_random_list\n",
+    "    dataset['Age'] = dataset['Age'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "de152895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train[['Sex','Pclass','Age','SibSp','Parch','Cabin']]\n",
+    "Y_train = train['Survived']\n",
+    "X_test = test[['Sex','Pclass','Age','SibSp','Parch','Cabin']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "200b0a16",
+   "metadata": {},
+   "source": [
+    "#### Exercise:kNN\n",
+    "\n",
+    "#### Using the Titanic data: Create a kNN model Report accuracy when number of neighbors = {1, 3, 5, 7}. Pick the best k value and then change the weighted distance metric. Report if distance weighting helps or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "65c112ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def knn_model(n_neighbors, X_train, Y_train):\n",
+    "    neigh = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
+    "    neigh.fit(X_train, Y_train)\n",
+    "    neigh_pred = neigh.predict(X_train)\n",
+    "    return neigh_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f013c748",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def performace(test_results, gold_results):\n",
+    "    tab = pd.crosstab(test_results,gold_results,rownames=['Actual'],colnames=['Predicted'])\n",
+    "    print(tab)\n",
+    "\n",
+    "    matrix = confusion_matrix(test_results,gold_results)\n",
+    "    print('Confusion matrix : \\n',matrix)\n",
+    "\n",
+    "    # classification report for precision, recall f1-score and accuracy\n",
+    "    matrix = classification_report(test_results,gold_results)\n",
+    "    print('Classification report : \\n',matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ab3ab182",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1,\n",
+       "       1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1,\n",
+       "       1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0,\n",
+       "       0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0,\n",
+       "       0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1,\n",
+       "       0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0,\n",
+       "       0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
+       "       0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0,\n",
+       "       0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0,\n",
+       "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0,\n",
+       "       1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0,\n",
+       "       0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1,\n",
+       "       1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0,\n",
+       "       0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1,\n",
+       "       0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0,\n",
+       "       0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+       "       1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1,\n",
+       "       0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1,\n",
+       "       1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neigh_pred = knn_model(1,X_train,Y_train)\n",
+    "neigh_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b385ce1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1\n",
+      "Actual             \n",
+      "0          478   71\n",
+      "1           35  307\n",
+      "Confusion matrix : \n",
+      " [[478  71]\n",
+      " [ 35 307]]\n",
+      "Classification report : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.87      0.90       549\n",
+      "           1       0.81      0.90      0.85       342\n",
+      "\n",
+      "    accuracy                           0.88       891\n",
+      "   macro avg       0.87      0.88      0.88       891\n",
+      "weighted avg       0.89      0.88      0.88       891\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "performace(Y_train,neigh_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "972f27d4",
+   "metadata": {},
+   "source": [
+    "###### ACCURACY OF KNN (K=1) 0.88"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "05b15195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1\n",
+      "Actual             \n",
+      "0          500   49\n",
+      "1           70  272\n",
+      "Confusion matrix : \n",
+      " [[500  49]\n",
+      " [ 70 272]]\n",
+      "Classification report : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.91      0.89       549\n",
+      "           1       0.85      0.80      0.82       342\n",
+      "\n",
+      "    accuracy                           0.87       891\n",
+      "   macro avg       0.86      0.85      0.86       891\n",
+      "weighted avg       0.87      0.87      0.87       891\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "neigh_pred = knn_model(3,X_train,Y_train)\n",
+    "performace(Y_train,neigh_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ac809a7",
+   "metadata": {},
+   "source": [
+    "###### ACCURACY OF KNN (K=3) 0.87"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "17b999b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1\n",
+      "Actual             \n",
+      "0          500   49\n",
+      "1           86  256\n",
+      "Confusion matrix : \n",
+      " [[500  49]\n",
+      " [ 86 256]]\n",
+      "Classification report : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.91      0.88       549\n",
+      "           1       0.84      0.75      0.79       342\n",
+      "\n",
+      "    accuracy                           0.85       891\n",
+      "   macro avg       0.85      0.83      0.84       891\n",
+      "weighted avg       0.85      0.85      0.85       891\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "neigh_pred = knn_model(5,X_train,Y_train)\n",
+    "performace(Y_train,neigh_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fc94b48",
+   "metadata": {},
+   "source": [
+    "##### ACCURACY OF KNN (K=5) 0.87"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "eb002d36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1\n",
+      "Actual             \n",
+      "0          496   53\n",
+      "1           98  244\n",
+      "Confusion matrix : \n",
+      " [[496  53]\n",
+      " [ 98 244]]\n",
+      "Classification report : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.90      0.87       549\n",
+      "           1       0.82      0.71      0.76       342\n",
+      "\n",
+      "    accuracy                           0.83       891\n",
+      "   macro avg       0.83      0.81      0.82       891\n",
+      "weighted avg       0.83      0.83      0.83       891\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "neigh_pred = knn_model(7,X_train,Y_train)\n",
+    "performace(Y_train,neigh_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df58217c",
+   "metadata": {},
+   "source": [
+    "##### ACCURACY OF KNN (K=7) 0.83"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "58fc99f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## choosing the model with one nearest neighbour. It has the highest accuracy of 0.88\n",
+    "\n",
+    "# change the weighted distance metric\n",
+    "knn_clf = KNeighborsClassifier(n_neighbors=3, weights='distance')\n",
+    "knn_clf.fit(X_train, Y_train)\n",
+    "knn_pred = knn_clf.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "be1f6b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted    0    1\n",
+      "Actual             \n",
+      "0          531   18\n",
+      "1           54  288\n",
+      "Confusion matrix : \n",
+      " [[531  18]\n",
+      " [ 54 288]]\n",
+      "Classification report : \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.97      0.94       549\n",
+      "           1       0.94      0.84      0.89       342\n",
+      "\n",
+      "    accuracy                           0.92       891\n",
+      "   macro avg       0.92      0.90      0.91       891\n",
+      "weighted avg       0.92      0.92      0.92       891\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "performace(Y_train, knn_pred)\n",
+    "\n",
+    "# performance improved the accuacy of k=3"
    ]
   }
  ],
